# eve-trade

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trivyignore.yaml  AGENTS.md  Cargo.toml  README.md  apply-integration-tests.ps1  buf.gen.yaml  buf.yaml  changes.md  compose.yaml  docker-compose.integration.local.yml  docker-compose.integration.yml  encore.app  eve_trade_local_ci_k8s.py  go.mod  go.sum  go.work  go.work.sum  go_modules_test.go  package.json  pnpm-lock.yaml  run-eve-trade.cmd  run-eve-trade.sh  stop-eve-trade.cmd  stop-eve-trade.sh
.agents/: 00-ORCHESTRATION.md  01-DELEGATION-GATES.md  02-CONTEXT-PACKET.md  03-EVIDENCE-PACKET.md  04-CHECKPOINTS.md  05-EVE-TRADE-INVARIANTS.md  MANIFEST.md  PACKAGE-NOTES.md  README.md  adversarial-verifier.toml  evidence-investigator.toml  final-auditor.toml  implementation-worker.toml
.codex/: config.toml
.github/: action-runtime-policy.json  kind-e2e.yaml
.github/workflows/: verify.yaml
.o11y/: current-e2e-kind.xml  local-kind-65c047dd-attempt-1.xml
.o11y/collector/: logs.json
.o11y/parity-smoke/: parity-diff.html  parity-diff.json  parity-diff.md
.o11y/parity-smoke-2/: parity-diff.html  parity-diff.json  parity-diff.md
.o11y/runs/: latest-local.txt
Architecture/Canonical SQLx Design/: v1.md
ci-cd/: README.md  pipeline.py  requirements.txt
dagger/: pipeline.py
distributed-backend/: OBSERVABILITY.md  buf.gen.yaml
distributed-backend/src/trade-settlement/: Cargo.toml  build.rs  fix.ps1  trade-settlement.Dockerfile
distributed-backend/src/trade-settlement/config/: app-prod.toml  app.toml  default.toml
distributed-backend/src/trade-settlement/migrations/: 0001_settlement_schema.sql  0002_merge_item_stack_constraints.sql
distributed-backend/src/trade-settlement/proto/trade_settlement/v1/: trade_settlement.proto
distributed-backend/src/trade-settlement/seeds/: local_dev_world.sql
distributed-backend/src/trade-settlement/src/: authorization.rs  checksum.rs  commands.rs  db.rs  error.rs  executor.rs  generated.rs  idempotency.rs  lib.rs  main.rs  observability.rs  operations.rs  plan.rs  proto.rs  service.rs  state.rs  telemetry.rs  validation.rs
distributed-backend/src/trade-settlement/src/db/: checksums.rs  claims.rs  commands.rs  extract.rs  idempotency.rs  item_stacks.rs  mod.rs  operation_log.rs  orders.rs  ownership.rs  proto_builders.rs  queries.rs  responses.rs  rows.rs  settlements.rs  time.rs  trade.rs  transactions.rs  types.rs  validation.rs  workflows.rs
distributed-backend/src/trade-settlement/src/dbv2/: mod.rs  roadmap.md  support.rs  types.rs  wallets.rs
gametrade/: accept_trade_instance.go  cancel_trade_instance.go  issue_trade_instance.go  settle_trade_instance.go  trade_instance_test.go  validation.go
observability/: .coveragerc  README.md  requirements.txt
scripts/: gui-simulator-demo.cjs  gui-simulator-demo.test.cjs  harden_encore_install.sh  install_encore_cli.sh  quilkin_udp_fallback.py  render_release_kubernetes.py  run-gui-demo.ps1  run-local.ps1  run_canonical_regressions.py  run_kind_e2e.sh  stop-local.ps1  verify_architecture_boundaries.py  verify_canonical_regression_tests.py  verify_compose_runtime_credentials.py  verify_rendered_kubernetes.py  verify_repository.py  verify_schema_ownership.py
simulator/: .coveragerc  Dockerfile  manage.py  requirements-test.txt  requirements.txt
(+704 files in other folders)
