[package]
name = "trade-settlement"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
chrono = { version = "0.4.45", features = ["clock"] }
prost = "0.14"
prost-types = "0.14.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
summer = "0.7.1"
summer-grpc = "0.7.1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.14"
tonic-prost = "0.14.6"
tracing = "0.1"
uuid = { version = "1.23.3", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14.6"
