[package]
name = "trade-settlement"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
summer = "0.7.1"
summer-grpc = "0.7.1"
summer-opentelemetry = { version = "0.7.1", default-features = false, features = ["http", "more-resource"] }
summer-sqlx = { version = "0.7.1", default-features = false, features = ["postgres", "runtime-tokio-rustls", "with-uuid", "with-json", "with-chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tonic-prost-build = "0.14.6"

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.build-dependencies]
protoc-bin-vendored-linux-x86_64 = "3.2.0"

[target.'cfg(windows)'.build-dependencies]
protoc-bin-vendored-win32 = "3.2.0"
